<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_red_00"
    tools:context=".CalculateImcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TesteViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_imc_desc" />

        <EditText
            android:id="@+id/edit_imc_weight"
            style="@style/EditTextForm"
            android:hint="@string/weigth" />

        <EditText
            android:id="@+id/edit_imc_height"
            style="@style/EditTextForm"
            android:hint="@string/height" />

        <Button
            android:id="@+id/btn_imc_send"
            style="@style/ButtonForm"
            android:text="@string/calc" />


    </LinearLayout>


</ScrollView>