<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_red_00"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_calculate_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_imc"
        android:textColor="@color/app_red_07"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_descubra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descubra"
        android:textSize="18sp"
        android:textColor="@color/app_red_06"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_calculate_imc"/>

    <ImageView
        android:id="@+id/img_view_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_imc"
        app:layout_constraintBottom_toTopOf="@+id/btn_comeca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_descubra" />

    <Button
        android:id="@+id/btn_comeca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/app_red_05"
        android:text="@string/comecar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>